# saorsa-webrtc

./: .gitignore  Cargo.toml  ENTERPRISE_REVIEW_SUMMARY.md  EXPLORATION_COMPLETE.md  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_ANALYSIS.md  KEY_FILES_SUMMARY.md  PLATFORM_BINDINGS_SUMMARY.md  QUICK_REFERENCE.txt  README.md  README_PLATFORMS.md  TDD_COMPLETION_SUMMARY.md
docs/: DOCUMENTATION_INDEX.md  PRODUCTION_READINESS_FIXES.md  QUIC_DATA_PATH_COMPLETE.md  QUIC_DATA_PATH_PROGRESS.md
saorsa-webrtc-cli/: Cargo.toml
saorsa-webrtc-cli/src/: main.rs  terminal_ui.rs  terminal_ui_tests.rs
saorsa-webrtc-codecs/: Cargo.toml
saorsa-webrtc-codecs/src/: lib.rs  openh264.rs  opus.rs
saorsa-webrtc-core/: Cargo.toml
saorsa-webrtc-core/src/: lib.rs  media.rs  quic_bridge.rs  service.rs  signaling.rs  signaling_gossip_example.rs
saorsa-webrtc-core/tests/: call_state_machine_tests.rs  enhanced_integration_tests.rs  integration_tests.rs  media_cleanup_tests.rs  quic_transport_tests.rs  rtp_bridge_tests.rs  signaling_validation_tests.rs
saorsa-webrtc-core/tests/fixtures/: mock_transport.rs  mod.rs  proptest_helpers.rs  test_network.rs
saorsa-webrtc-ffi/: Cargo.toml
saorsa-webrtc-ffi/src/: lib.rs  types.rs
saorsa-webrtc-kotlin/: README.md  build.gradle.kts  settings.gradle.kts
saorsa-webrtc-swift/: Package.swift  README.md
saorsa-webrtc-swift/.build/: build.db  plugin-tools.yaml
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/ModuleCache/19R4GKAKBTDQH/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XCTest-16NBZGJV3YRYA.pcm  XCUIAutomation-32USULGCX4UAI.pcm  XPC-T0ZXCAST7PE3.pcm  (+25 more)
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/Modules/: SaorsaWebRTC.swiftdoc  SaorsaWebRTC.swiftmodule  SaorsaWebRTC.swiftsourceinfo  SaorsaWebRTCPackageTests.swiftdoc  SaorsaWebRTCPackageTests.swiftmodule  SaorsaWebRTCPackageTests.swiftsourceinfo  SaorsaWebRTCTests.swiftdoc  SaorsaWebRTCTests.swiftmodule  SaorsaWebRTCTests.swiftsourceinfo
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/SaorsaWebRTC.build/: SaorsaWebRTC.d  SaorsaWebRTC.emit-module.d  SaorsaWebRTC.swiftdeps  master.priors  output-file-map.json  sources
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/SaorsaWebRTCPackageTests.build/: SaorsaWebRTCPackageTests.emit-module.d  master.priors  output-file-map.json  runner.d  runner.swiftdeps  sources
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/SaorsaWebRTCPackageTests.derived/: runner.swift
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/SaorsaWebRTCPackageTests.product/: Objects.LinkFileList
saorsa-webrtc-swift/.build/arm64-apple-macosx/debug/SaorsaWebRTCTests.build/: SaorsaWebRTCTests.d  SaorsaWebRTCTests.emit-module.d  SaorsaWebRTCTests.swiftdeps  master.priors  output-file-map.json  sources
saorsa-webrtc-swift/Sources/SaorsaWebRTC/: SaorsaWebRTC.swift
saorsa-webrtc-swift/Sources/SaorsaWebRTCFFI/: module.modulemap  saorsa_webrtc_ffi.h
saorsa-webrtc-swift/Tests/SaorsaWebRTCTests/: SaorsaWebRTCTests.swift
saorsa-webrtc-tauri/: Cargo.toml
saorsa-webrtc-tauri/src/: lib.rs
src/: call.rs  identity.rs  lib.rs  media.rs  quic_bridge.rs  quic_streams.rs  service.rs  signaling.rs  transport.rs  types.rs
tests/: rtp_bridge_tests.rs
(+221 files in other folders)
