[package]
name = "saorsa-webrtc"
version = "0.1.0"
edition = "2024"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0"
homepage = "https://github.com/saorsalabs/saorsa-webrtc"
repository = "https://github.com/saorsalabs/saorsa-webrtc"
description = "WebRTC implementation over ant-quic transport with DHT-based signaling"
keywords = ["webrtc", "quic", "p2p", "voip", "decentralized"]
categories = ["network-programming", "multimedia", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/saorsa-webrtc"

[features]
default = []
# Test utilities including mock DHT for integration tests
test-utils = []

[dependencies]
# Core async and serialization
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.21"
bincode = "1.3"

# Cryptography
saorsa-pqc = "0.3.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
blake3 = "1.5"
chacha20poly1305 = "0.10"

# Performance
parking_lot = "0.12"
once_cell = "1.19"

# Networking - ant-quic as primary transport
ant-quic = { version = "0.10.0", features = ["pqc"], path = "../ant-quic" }
four-word-networking = { version = "2.6" }

# WebRTC dependencies for voice/video calling
webrtc = "0.13"
webrtc-ice = "0.13"
webrtc-media = "0.10"
webrtc-sctp = "0.12"
webrtc-srtp = "0.15"
webrtc-dtls = "0.12"
webrtc-data = "0.11"
interceptor = "0.14"
rtcp = "0.13"
rtp = "0.13"

# Utilities
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
serial_test = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"
