[package]
name = "saorsa-webrtc-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Saorsa WebRTC"

[[bin]]
name = "saorsa"
path = "src/main.rs"

[dependencies]
saorsa-webrtc-core = "0.2.0"
saorsa-webrtc-codecs = "0.2.0"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
    serde_json.workspace = true

# CLI specific
clap = { version = "4.4", features = ["derive", "env"] }
crossterm = "0.27"
ratatui = "0.25"
viuer = "0.7"
directories = "5.0"
