[package]
name = "saorsa-webrtc-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri plugin for Saorsa WebRTC"

[dependencies]
saorsa-webrtc-core = "0.2.0"
tauri = { version = "1.5", features = ["api-all"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
