[package]
name = "saorsa-webrtc-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri plugin for Saorsa WebRTC"

[dependencies]
saorsa-webrtc-core = { version = "0.2.1", path = "../saorsa-webrtc-core" }
tauri = { version = "1.5", features = ["api-all"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
